- 2 functions inside the addon are not unicode-safe.
- Finaly fixed issue 19 (confirmed)
- Fixed ugly bug inside dvd-chapter.sh 
  (there was no device for dvd on some calls to lsdvd)
  Thanks to fabrice.peiffer@convar.com
- Fixed issue 22 with loging non asci-code inside log.
- In the case the progress-bar is open and displayed, there is no 
  need to show the same information inside the info-area.



----------------------------------------------------------------------------------------------------
Date : 11.04.2011 | Release : 0.6.20    | Author  : H.Weber | CVS:497-514
----------------------------------------------------------------------------------------------------

Changes:

- Initial-Work for release named "Jurassic Park"
- Directorys to be created are shown inside setup.sh
- By default the new parameter detect structure-protection is 
  not enabled.(parameter-id 32087)
- Default transcoding to makemkv was not running properly ....
- A few speed-up operations ....
- Blocksize for dd operation has ben increased to 2M 
- Integrate installation / upgrade of makemkv 1.6.10 into setup.sh (only 32)
- Integrate installation / upgrade of makemkv 1.6.10 into setup.sh (only 64)
- Create symbolic link for setup.sh inside addon-directory 
 
Fixes:

- In the case that the predefined audio or subtitle is not found on 
  the current DVD a error message is displayed. ( In this case you have to 
  transcode or ripp the dvd with the expert mode)
- Notificatons are only shown after reaching 5 % or higher ...
- Disable Notifications on menu-point "Kill process" inside job-window.


  
----------------------------------------------------------------------------------------------------
Date : 23.06.2011 | Release : 0.6.21    | Author  : H.Weber | CVS: 515 
----------------------------------------------------------------------------------------------------

Changes:

- Initial-Work for release named "V for vendetta"

Fixes:

 


 






