@@ -352,6 +352,8 @@ Date : 23.06.2011 | Release : 0.6.21    | Author  : H.Weber | CVS: 515
 Changes:
 
 - Initial-Work for release named "V for vendetta"
+- Integrate source-code for makemkv 1.6.14 into project-url
+- Integrate installation / upgrade of makemkv 1.6.14 into setup.sh (only 32)
 
 Fixes:
 
